--- a/.github/workflows/ci_html_builder.yml
+++ b/.github/workflows/ci_html_builder.yml
@@ -1,4 +1,4 @@
-name: Build JupyterBook and Deploy
+name: Build and Deploy JupyterBook
 
 on:
   workflow_call:
@@ -12,7 +12,7 @@ on:
         required: true
 
 jobs:
-  build-and-deploy:
+  build-html-site:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -37,3 +37,4 @@ jobs:
       with:
         github_token: ${{ secrets.github-token }}
         publish_dir: _build/html
+        publish_branch: gh-pages
