--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -51,13 +51,19 @@ jobs:
     - id: changed
       run: |
         git fetch origin main
+    
         NOTEBOOKS=$(git diff --name-only origin/main HEAD -- 'notebooks/**/*.ipynb' | jq -R . | jq -s .)
-        echo "changed_notebooks=$NOTEBOOKS" >> $GITHUB_OUTPUT
+    
         DEPS=$(git diff --name-only origin/main HEAD -- requirements.txt environment.yml pre-requirements.sh | tr '\n' ' ')
         STATIC=$(git diff --name-only origin/main HEAD -- '*.md' static/** assets/** | tr '\n' ' ')
-        echo "changed_notebooks=$NOTEBOOKS" >> $GITHUB_OUTPUT
+    
+        echo "changed_notebooks<<EOF" >> $GITHUB_OUTPUT
+        echo "$NOTEBOOKS" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
+    
         echo "dependencies_changed=$([[ -n \"$DEPS\" ]] && echo true || echo false)" >> $GITHUB_OUTPUT
         echo "static_changed=$([[ -n \"$STATIC\" ]] && echo true || echo false)" >> $GITHUB_OUTPUT
+
 
   validate-and-execute:
     needs: detect-changes
