--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -198,7 +198,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-html-site:
-    needs: [post-merge-storage-update]
+    needs: [validate-and-execute]
     if: inputs.build-html == true
     uses: mgough-970/dev-actions/.github/workflows/ci_html_builder.yml@v1
     secrets:
