--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -199,8 +199,7 @@ jobs:
 
   build-html-site:
     needs: [post-merge-storage-update]
-    if: inputs.build-html == true
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     uses: mgough-970/dev-actions/.github/workflows/ci_html_builder.yml@v1
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
-
