--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -52,40 +52,54 @@ jobs:
       run: |
         git fetch origin main
 
-        if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-          echo "PR detected: finding changed notebooks."
-          NOTEBOOKS=$(git diff --name-only origin/main HEAD -- 'notebooks/**/*.ipynb' | jq -R . | jq -s .)
+        echo "Detecting changes..."
 
-        else
-          echo "Manual or scheduled run."
-          if [[ "${{ inputs.execution-mode }}" == "all" ]]; then
-            NOTEBOOKS=$(find notebooks/ -name '*.ipynb' | jq -R . | jq -s .)
+        NOTEBOOKS_TO_RUN=()
 
-          elif [[ "${{ inputs.execution-mode }}" == "single" ]]; then
-            echo "Looking for single notebook: ${{ inputs.single-filename }}"
-            NOTEBOOK_PATH=$(find notebooks/ -name "${{ inputs.single-filename }}" | head -n 1)
-            if [[ -z "$NOTEBOOK_PATH" ]]; then
-              echo "ERROR: Single notebook '${{ inputs.single-filename}}' not found."
-              exit 1
-            fi
-            NOTEBOOKS=$(echo "$NOTEBOOK_PATH" | jq -R . | jq -s .)
-
-          else
-            echo "ERROR: Invalid manual execution mode."
-            exit 1
-          fi
+        echo "Checking if global dependency files changed..."
+        if git diff --name-only origin/main HEAD -- requirements.txt environment.yml pre-requirements.sh | grep .; then
+          echo "Global dependency file change detected."
+          NOTEBOOKS_TO_RUN+=($(find notebooks/ -name '*.ipynb'))
         fi
 
-        echo "Discovered notebooks:"
-        echo "$NOTEBOOKS"
+        echo "Checking if subfolder requirements.txt files changed..."
+        for file in $(git diff --name-only origin/main HEAD -- 'notebooks/**/requirements.txt'); do
+          if [[ -n "$file" ]]; then
+            folder=$(dirname "$file")
+            echo "Folder-specific dependency file changed in $folder"
+            NOTEBOOKS_TO_RUN+=($(find "$folder" -name '*.ipynb'))
+          fi
+        done
 
-        echo "notebooks_json<<EOF" >> $GITHUB_OUTPUT
-        echo "$NOTEBOOKS" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+        if [[ "${{ github.event_name }}" == "pull_request" && "${{ inputs.execution-mode || 'changed' }}" == "changed" ]]; then
+          echo "Adding changed notebooks from PR diff."
+          CHANGED_NOTEBOOKS=$(git diff --name-only origin/main HEAD -- 'notebooks/**/*.ipynb')
+          for nb in $CHANGED_NOTEBOOKS; do
+            NOTEBOOKS_TO_RUN+=("$nb")
+          done
+        fi
 
+        # De-duplicate
+        NOTEBOOKS_TO_RUN=($(printf "%s\n" "${NOTEBOOKS_TO_RUN[@]}" | sort -u))
+
+        if [[ ${#NOTEBOOKS_TO_RUN[@]} -eq 0 ]]; then
+          echo "No notebooks detected for execution."
+          echo "notebooks_json=[]" >> $GITHUB_OUTPUT
+        else
+          # Convert list to JSON array
+          NOTEBOOKS_JSON=$(printf '%s\n' "${NOTEBOOKS_TO_RUN[@]}" | jq -R . | jq -s .)
+          echo "Detected notebooks:"
+          echo "$NOTEBOOKS_JSON"
+          echo "notebooks_json<<EOF" >> $GITHUB_OUTPUT
+          echo "$NOTEBOOKS_JSON" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+        fi
+
+        # Dependency or static file changes (only useful info gathering)
         DEPS=$(git diff --name-only origin/main HEAD -- requirements.txt environment.yml pre-requirements.sh | tr '\n' ' ')
-        STATIC=$(git diff --name-only origin/main HEAD -- '*.md' static/** assets/** | tr '\n' ' ')
         echo "dependencies_changed=$([[ -n \"$DEPS\" ]] && echo true || echo false)" >> $GITHUB_OUTPUT
+
+        STATIC=$(git diff --name-only origin/main HEAD -- '*.md' static/** assets/** | tr '\n' ' ')
         echo "static_changed=$([[ -n \"$STATIC\" ]] && echo true || echo false)" >> $GITHUB_OUTPUT
 
 
