--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -198,26 +198,34 @@ jobs:
           echo "No local requirements.txt for $ipynb_file"
         fi
 
-    - name: Validate Notebook
+    - name: Validate Notebook (Conda)
+      if: inputs.use-conda == true
       shell: bash -l {0}
       run: |
-        {% raw %} {% endraw %}
-        {% if inputs.use-conda == 'true' %}
         source ~/miniconda3/etc/profile.d/conda.sh
         conda activate ci_env
-        {% endif %}
+        pytest --nbval --nbval-cell-timeout=4000 "${{ matrix.notebook }}"
+
+    - name: Validate Notebook (No Conda)
+      if: inputs.use-conda != true
+      run: |
         pytest --nbval --nbval-cell-timeout=4000 "${{ matrix.notebook }}"
 
 
-    - name: Execute Notebook
+
+    - name: Execute Notebook (Conda)
+      if: inputs.use-conda == true
       shell: bash -l {0}
       run: |
-        {% raw %} {% endraw %}
-        {% if inputs.use-conda == 'true' %}
         source ~/miniconda3/etc/profile.d/conda.sh
         conda activate ci_env
-        {% endif %}
         jupyter nbconvert --to notebook --execute --inplace "${{ matrix.notebook }}"
+    
+    - name: Execute Notebook (No Conda)
+      if: inputs.use-conda != true
+      run: |
+        jupyter nbconvert --to notebook --execute --inplace "${{ matrix.notebook }}"
+
 
 
     - name: Security Scan Notebook
