--- a/.github/workflows/ci_deprecate.yml
+++ b/.github/workflows/ci_deprecate.yml
@@ -1,90 +1,56 @@
-name: Deprecation Manager
+name: Deprecate Notebook
 
 on:
   workflow_call:
     inputs:
       notebook-path:
-        required: false
+        description: "Path to the notebook to deprecate (e.g., notebooks/MIRI/JWPipeNB-MIRI-MRS.ipynb)"
+        required: true
         type: string
       removal-date:
-        required: false
+        description: "Scheduled removal date (e.g., 2024-12-31)"
+        required: true
         type: string
     secrets:
       github-token:
         required: true
 
-  schedule:
-    - cron: '0 3 * * *'  # Every night at 3AM UTC
-
 jobs:
-  manual-deprecate:
-    if: github.event_name == 'workflow_dispatch'
+  deprecate-notebook:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Mark Notebook as Deprecated
-      run: |
-        NOTEBOOK="${{ inputs.notebook-path }}"
-        REMOVAL_DATE="${{ inputs.removal-date }}"
+      - name: Add Deprecation Banner and Metadata
+        run: |
+          NOTEBOOK="${{ inputs.notebook-path }}"
+          REMOVAL_DATE="${{ inputs.removal-date }}"
 
-        if [[ -z "$NOTEBOOK" || -z "$REMOVAL_DATE" ]]; then
-          echo "Notebook path and removal date must be provided."
-          exit 1
-        fi
+          echo "Deprecating notebook: $NOTEBOOK with removal date: $REMOVAL_DATE"
 
-        echo "Adding deprecation banner to $NOTEBOOK"
-
-        # Insert a Markdown cell warning users
-        jq --arg date "$REMOVAL_DATE" \
-          '.cells |= [{"cell_type":"markdown","metadata":{},"source":["⚠️ **DEPRECATED**: This notebook is scheduled for removal on \($date).\n"]}] + .' \
-          "$NOTEBOOK" > temp.json && mv temp.json "$NOTEBOOK"
-
-        # Add metadata
-        jq '.metadata.deprecated = {"status": true, "removal_date": "'"$REMOVAL_DATE"'"}' "$NOTEBOOK" > temp.json && mv temp.json "$NOTEBOOK"
-
-    - name: Commit Deprecation Changes
-      run: |
-        git config --global user.name "CI Bot"
-        git config --global user.email "ci-bot@example.com"
-        git add ${{ inputs.notebook-path }}
-        git commit -m "Manually deprecated ${{ inputs.notebook-path }}"
-        git push origin gh-storage
-      env:
-        GITHUB_TOKEN: ${{ secrets.github-token }}
-
-  move-expired-deprecations:
-    if: github.event_name == 'schedule'
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Move expired notebooks
-      run: |
-        CURRENT_DATE=$(date -u +"%Y-%m-%d")
-        mkdir -p deprecated_notebooks/
-
-        for nb in $(find notebooks/ -name '*.ipynb'); do
-          REMOVAL_DATE=$(jq -r '.metadata.deprecated.removal_date // empty' "$nb")
-          if [[ ! -z "$REMOVAL_DATE" && "$REMOVAL_DATE" < "$CURRENT_DATE" ]]; then
-            echo "Moving expired notebook: $nb"
-            mv "$nb" "deprecated_notebooks/$(basename "$nb")"
+          if [[ ! -f "$NOTEBOOK" ]]; then
+            echo "ERROR: Notebook not found at $NOTEBOOK"
+            exit 1
           fi
-        done
 
-        if [[ "$(ls -A deprecated_notebooks)" ]]; then
-          git config --global user.name "CI Bot"
-          git config --global user.email "ci-bot@example.com"
-          git add deprecated_notebooks/
-          git rm $(find notebooks/ -name '*.ipynb' -path 'deprecated_notebooks/*' -prune -o -print)
-          git commit -m "Auto-move expired deprecated notebooks"
+          # Insert a Markdown warning cell at the top
+          jq --arg date "$REMOVAL_DATE" \
+            '.cells |= [{"cell_type":"markdown","metadata":{},"source":["⚠️ **DEPRECATED**: This notebook is scheduled for removal on \($date).\n"]}] + .' \
+            "$NOTEBOOK" > temp1.json && mv temp1.json "$NOTEBOOK"
+
+          # Add deprecation metadata
+          jq '.metadata.deprecated = {"status": true, "removal_date": "'"$REMOVAL_DATE"'"}' "$NOTEBOOK" > temp2.json && mv temp2.json "$NOTEBOOK"
+
+      - name: Commit and Push Deprecation Changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout gh-storage || git checkout -b gh-storage
+          git add "${{ inputs.notebook-path }}"
+          git commit -m "Manually deprecated notebook ${{ inputs.notebook-path }}"
           git push origin gh-storage
-        else
-          echo "No expired notebooks found."
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.github-token }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.github-token }}
